tests/snapshots/pretty_print_snapshots__rule_parameter_with_regex.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 173
expression: out
---
(rule "curl"
  (and (parameter ["X" "request"] (regex "^GET$")) (allow)))
