tests/snapshots/pretty_print_snapshots__rule_positional_atoms.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "git" (and (positional "push") (allow)))
── output ──
(rule "git"
  (and (positional "push") (allow)))
