tests/snapshots/pretty_print_snapshots__rule_positional_with_quantifier.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 147
expression: out
---
(rule "rm"
  (and (positional (* (regex "^/tmp/"))) (allow)))
