tests/snapshots/pretty_print_snapshots__rule_tail_authorise.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 210
expression: out
---
(rule "sudo"
  (tail (authorise)))
