tests/snapshots/pretty_print_snapshots__rule_unless.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm" (unless (flag "r") (allow)))
── output ──
(rule "rm"
  (unless (flag "r")
    (allow)))
