tests/snapshots/pretty_print_snapshots__rule_when.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "rm" (when (flag "r") (ask "recursive")))
── output ──
(rule "rm"
  (when (flag "r")
    (ask "recursive")))
