tests/snapshots/pretty_print_snapshots__safe_env_vars.snap
---
source: tests/pretty_print_snapshots.rs
assertion_line: 345
expression: out
---
(safe-env-vars "HOME" "USER" "PATH")
