tests/snapshots/pretty_print_snapshots__very_narrow_width_20_drops_each_arg.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 20) ──
(rule "rm" (and (flag "r") (anywhere "/") (deny)))
── output ──
(rule "rm"
  (and
   (flag "r")
   (anywhere "/")
   (deny)))
